--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "^3.24.1",
+    "cos-js-sdk-v5": "^1.3.10",
     "dayjs": "^1.11.4",
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
+    "i": "^0.3.7",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
