--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "element-ui": "2.13.2",
     "file-saver": "^2.0.5",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "qrcode": "^1.5.1",
     "vue": "2.6.10",
+    "vue-print-nb": "^1.7.5",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "vuex-persistedstate": "^4.1.0",
